<resources>
    <string name="app_name">CalculatorX</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="point">.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="product">*</string>
    <string name="division">/</string>
    <string name="equal">=</string>
    <string name="Clear">C</string>
    <string name="AllClear">AC</string>
    <string name="input">Input here</string>
    <string name="result">Answer</string>
</resources>
