<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:rowCount="5"
    android:orientation="vertical">

    <Button
        android:id="@+id/AC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:background="#72E2FF"
        android:textColor="#ffffff"
        android:text="@string/AllClear"
        android:textSize="35sp"
        android:onClick="clear"
        />

    <ImageButton
        android:id="@+id/division"
        android:contentDescription="@string/division"
        style="@style/Buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:src="@drawable/btn_division1"
        android:onClick="clickOPER"
        />

    <ImageButton
        android:id="@+id/product"
        android:contentDescription="@string/product"
        style="@style/Buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:src="@drawable/btn_product1"
        android:onClick="clickOPER"
        />

    <ImageButton
        android:id="@+id/clear"
        android:contentDescription="@string/Clear"
        style="@style/Buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:src="@drawable/btn_baclspace1"
        android:onClick="clear"
        />

    <Button
        android:id="@+id/seven"
        style="@style/Buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:text="@string/seven"
        android:onClick="clickNUMBER"
        />

    <Button
        android:id="@+id/eight"
        style="@style/Buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:text="@string/eight"
        android:onClick="clickNUMBER"
        />

    <Button
        android:id="@+id/nine"
        style="@style/Buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:text="@string/nine"
        android:onClick="clickNUMBER"/>

    <ImageButton
        android:id="@+id/minus"
        android:contentDescription="@string/minus"
        style="@style/Buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:src="@drawable/btn_subtract1"
        android:textColor="#68E9FA"
        android:onClick="clickOPER"
        />

    <Button
        android:id="@+id/four"
        style="@style/Buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:text="@string/four"
        android:onClick="clickNUMBER"
        />

    <Button
        android:id="@+id/five"
        style="@style/Buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:text="@string/five"
        android:onClick="clickNUMBER"/>

    <Button
        android:id="@+id/six"
        style="@style/Buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:text="@string/six"
        android:onClick="clickNUMBER"
        />

    <ImageButton
        android:id="@+id/plus"
        android:contentDescription="@string/plus"
        style="@style/Buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:src="@drawable/btn_plus1"
        android:onClick="clickOPER"
        />

    <Button
        android:id="@+id/one"
        style="@style/Buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:text="@string/one"
        android:onClick="clickNUMBER"/>

    <Button
        android:id="@+id/two"
        style="@style/Buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:text="@string/two"
        android:onClick="clickNUMBER"
        />

    <Button
        android:id="@+id/three"
        style="@style/Buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:text="@string/three"
        android:onClick="clickNUMBER"
        />

    <Button
        android:id="@+id/equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_rowSpan="2"
        android:layout_rowWeight="1"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:background="#72E2FF"
        android:text="@string/equal"
        android:textColor="#ffffff"
        android:textSize="50sp"
        android:onClick="clickEQUAL"/>

    <Button
        android:id="@+id/zero"
        style="@style/Buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:layout_marginStart="0dp"
        android:text="@string/zero"
        android:onClick="clickNUMBER"
        />

    <Button
        android:id="@+id/point"
        style="@style/Buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:text="@string/point"
        android:onClick="clickNUMBER"
        />
</GridLayout>